theory and returning to it. Regular definitional packages should use
balanced blocks of Local_Theory.open_target versus
Local_Theory.close_target instead. Rare INCOMPATIBILITY.

* Structure TimeLimit (originally from the SML/NJ library) has been
replaced by structure Timeout, with slightly different signature.
INCOMPATIBILITY.


*** System ***

* File.bash_string, File.bash_path etc. represent Isabelle/ML and
Isabelle/Scala strings authentically within GNU bash. This is useful to
produce robust shell scripts under program control, without worrying
about spaces or special characters. Note that user output works via
Path.print (ML) or Path.toString (Scala). INCOMPATIBILITY, the old (and
less versatile) operations File.shell_quote, File.shell_path etc. have
been discontinued.

* The Isabelle system environment always ensures that the main
executables are found within the PATH: isabelle, isabelle_process,
isabelle_scala_script.

* Command-line tool "isabelle_process" no longer supports writable heap
images. INCOMPATIBILITY in exotic situations where "isabelle build"
cannot be used: the structure ML_Heap provides operations to save the ML
heap under program control.

* Command-line tool "isabelle_process" supports ML evaluation of literal
expressions (option -e) or files (option -f). Errors lead to premature
exit of the ML process with return code 1.

* Command-line tool "isabelle console -r" helps to bootstrap
Isabelle/Pure interactively.

* The somewhat pointless command-line tool "isabelle yxml" has been
discontinued. INCOMPATIBILITY, use operations from the modules "XML" and
"YXML" in Isabelle/ML or Isabelle/Scala.

* SML/NJ and old versions of Poly/ML are no longer supported.


New in Isabelle2016 (February 2016)
-----------------------------------

*** General ***

* Eisbach is now based on Pure instead of HOL. Objects-logics may import
either the theory ~~/src/HOL/Eisbach/Eisbach (for HOL etc.) or